[package]
name = "meloweb"
version = "0.1.0"
authors = ["***Realname*** ***Lastname*** <***redacted.email@redacted.nope***>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "~0.9.0"
melo = { path="../melo", default-features = false }
stdweb = "~0.4.0"

[patch.crates-io]
rimd = { path = "./rimd" }
